Fixed mobile menu issue
Mobile menu was overlapping with the website content.

--- a/main.css
+++ b/main.css
@@ -32,7 +32,6 @@ html {
 
 nav {
     text-align: right;
-    height: 70px;
     line-height: 70px;
 }
 
@@ -202,7 +201,7 @@ p {
         display: block;
         border-bottom: 1px solid #EAEAEB;
         margin: 0;
-     
+        background-color: white;
     }
     #toggle:checked + .menu {
         display: block;
@@ -211,6 +210,7 @@ p {
     .intro-container {
     display: flex;
     flex-direction: column;
+    padding-top: 70px
     }
 
     .intro-text-container {
